--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-rootProject.name = 'java15-app'
+// To create this war file (ex: ./gradlew build) for newer versions of Java (typically early access ones) before gradle supports it
+// See the README.md file
+
+rootProject.name = 'java16-app'
