--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'war'
 apply plugin: 'liberty'
 
 group = 'org.gjwatts'
-version = '1.16-SNAPSHOT'
+version = '1.17-SNAPSHOT'
 description = "Basic Liberty repo"
 
 tasks.withType(JavaCompile) {
@@ -34,7 +34,7 @@ test {
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(16)
+    languageVersion = JavaLanguageVersion.of(17)
   }
 }
 
@@ -57,17 +57,17 @@ configurations {
 
 dependencies {
     compileOnly group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
-    compileOnly group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+//    compileOnly group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
     compileOnly group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
     compileOnly group: 'javax.enterprise', name: 'cdi-api', version: '2.0'
-    compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    compileOnly group: 'javax.transaction', name: 'javax.transaction-api', version: '1.3'
-    libertyRuntime group: 'io.openliberty', name: 'openliberty-runtime', version: '21.0.0.2'
-    serverLibs group: 'org.apache.derby', name: 'derby', version: '10.14.2.0' // '10.15.1.3'
+//    compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+//    compileOnly group: 'javax.transaction', name: 'javax.transaction-api', version: '1.3'
+    libertyRuntime group: 'io.openliberty', name: 'openliberty-runtime', version: '21.0.0.9'
+//    serverLibs group: 'org.apache.derby', name: 'derby', version: '10.14.2.0' // '10.15.1.3'
 }
 
 ext {
-	appUrl = 'http://localhost:9080/java16-app/'
+	appUrl = 'http://localhost:9080/java17-app/'
 }
 
 liberty {
